--- a/react-multiples/package.json
+++ b/react-multiples/package.json
@@ -43,8 +43,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.8",
     "single-spa-react": "^4.3.1"
   }
 }
